ecmascript/parser/tests/typescript-errors/tsc/expressions/unaryOperators/typeofOperator/typeofOperatorInvalidOperations/input.ts.stderr
error: Expected a semicolon
 --> $DIR/tests/typescript-errors/tsc/expressions/unaryOperators/typeofOperator/typeofOperatorInvalidOperations/input.ts:4:15
  |
4 | var ANY = ANY typeof ;    //expect error
  |               ^^^^^^

error: Unexpected token `;`. Expected this, import, async, function, [ for array literal, { for object literal, @ for decorator, function, class, null, true, false, number, bigint, string, regexp, ` for template literal, (, or an identifier
 --> $DIR/tests/typescript-errors/tsc/expressions/unaryOperators/typeofOperator/typeofOperatorInvalidOperations/input.ts:4:22
  |
4 | var ANY = ANY typeof ;    //expect error
  |                      ^

error: Unexpected token `;`. Expected this, import, async, function, [ for array literal, { for object literal, @ for decorator, function, class, null, true, false, number, bigint, string, regexp, ` for template literal, (, or an identifier
 --> $DIR/tests/typescript-errors/tsc/expressions/unaryOperators/typeofOperator/typeofOperatorInvalidOperations/input.ts:7:19
  |
7 | var ANY1 = typeof ;
  |                   ^

